--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
 		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"uuid": "^9.0.1",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/uuid": "^9.0.7"
+	}
 }
